force-app/main/default/objects/GGW_Grant_Application__c/fields/Application_Name__c.field-meta.xml
<CustomField>
    <fullName>Application_Name__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/n/GGW_Grant_Editor?c__recordId=&quot; &amp; Id, Name, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Name</label>
    <type>Text</type>
</CustomField>