force-app/main/default/objects/GGW_Grant_Application__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Describe a grant in short text with 255 characters</description>
    <inlineHelpText>Describe a grant in short text with 255 characters</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>