force-app/main/default/objects/GGW_Grant_Application__c/fields/DistributionPublicUrl__c.field-meta.xml
<CustomField>
    <fullName>DistributionPublicUrl__c</fullName>
    <description>Distribution URL</description>
    <inlineHelpText>Distribution URL</inlineHelpText>
    <label>DistributionPublicUrl</label>
    <type>Url</type>
</CustomField>