force-app/main/default/objects/GGW_Grant_Application__c/fields/Include_Logo__c.field-meta.xml
<CustomField>
    <fullName>Include_Logo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This boolean TRU/FALSE field indicates if log be included or not in final application</description>
    <inlineHelpText>This boolean TRU/FALSE field indicates if log be included or not in final application</inlineHelpText>
    <label>Include Logo</label>
    <type>Checkbox</type>
</CustomField>