force-app/main/default/objects/GGW_Grant_Application__c/fields/Logo_Download_Url__c.field-meta.xml
<CustomField>
    <fullName>Logo_Download_Url__c</fullName>
    <description>URL for public image download used for LWC or page display</description>
    <inlineHelpText>URL for public image download used for LWC or page display</inlineHelpText>
    <label>Logo Download Url</label>
    <type>Url</type>
</CustomField>