force-app/main/default/objects/GGW_Grant_Application__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Opportunity Object</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Grant Applications</relationshipLabel>
    <relationshipName>Grant_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>