force-app/main/default/objects/GGW_Grant_Application__c/listViews/Applications_in_Progress.listView-meta.xml
<ListView>
    <fullName>Applications_in_Progress</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Progress</value>
    </filters>
    <label>Applications in Progress</label>
</ListView>