force-app/main/default/objects/GGW_Grant_Application__c/listViews/Applications_Rejected.listView-meta.xml
<ListView>
    <fullName>Applications_Rejected</fullName>
    <columns>Application_Name__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>Applications Rejected</label>
</ListView>