force-app/main/default/objects/GGW_Grant_Application__c/listViews/Applications_Submitted.listView-meta.xml
<ListView>
    <fullName>Applications_Submitted</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Applications Submitted</label>
</ListView>